Base Template Design

--- a/musicly/Views/Instruments/InstrumentsList.cshtml
+++ b/musicly/Views/Instruments/InstrumentsList.cshtml
@@ -30,6 +30,7 @@
 
     .filters {
         background-color: blue;
+        text-align:right !important;
     }
 
     .instrumentImage {
@@ -73,13 +74,13 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="main-content">
+            <div class="main-content" style="min-width:100%">
                 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
                     <div id="instrumentList" class="row instrumentList">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                    <div class="filter" dir="rtl">
+                    <div class="filter" style="text-align:right" dir="rtl">
                         <h3 class="filter_title">סינון</h3>
                         <h4 class="heading">מחיר</h4>
                         <div class="scrollbar-prop">
