--- a/musicly/Views/Shared/Error.cshtml
+++ b/musicly/Views/Shared/Error.cshtml
@@ -6,7 +6,8 @@
 <style type="text/css">
     #notfound {
         position: relative;
-        height: 100vh;
+        height: 75vh;
+        text-align:center;
     }
 
     #notfound .notfound {
@@ -62,8 +63,8 @@
         <div class="notfound-400">
             <h1>@Model.ErrorCode</h1>
         </div>
-        <h2>Oops!</h2>
-        <p>@Model.Description</p>
-        <a href="#">Go To Homepage</a>
+        <h2 style="text-align:right;direction:rtl">אופס!</h2>
+        <p style="text-align:right;direction:rtl">@Model.Description</p>
+        <a href="#">חזור לדף הבית</a>
     </div>
 </div>
