--- a/musicly/Views/Home/About.cshtml
+++ b/musicly/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "קצת עלינו";
 }
 <link rel="stylesheet" href="~/css/about.css">
 
@@ -7,11 +7,10 @@
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="wYG7PNyA"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h2 style="text-align:right">@ViewData["Title"]</h2>
 
 
-<p>Use this area to provide additional information.</p>
+<p style="text-align:right">מידע שחשוב לדעת</p>
 
 
 <div id="about" class="container">
@@ -21,27 +20,22 @@
 
     <section>
         <aside>
-            <p>
-                Please visit our facebook page.<a href="https://www.facebook.com/Musicly-108669654304902" class="fa fa-facebook" target="_blank"></a>
-
-                <div class="fb-share-button" style="display:block" data-href="https://www.facebook.com/Musicly-108669654304902" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FSabrasme&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
-                <svg id="barChart"></svg>
-
+            <p style="direction:rtl">
+                אנחנו מזמינים אתכם להינות מחווית ההזמנה של רשת מוזיקלי! <br>
+                הרשת כיום מונה ארבעה סניפים באיזור השפלה ובעלת טווח משלוחים המכסה את כל האיזור.<br>
+                באתר תוכלו לקבל המלצות לכלי נגינה ולבצע רכישה של כלי הנגינה המושלם עבורכם<br>
+                אז למה אתם מחכים? <br>
+                תתחילו לגלוש!
             </p>
         </aside>
-        <p>
-            we invite you to stop your life for a couple
-            of minutes and enjoy from a fresh smoothie
-            or fresh juice.
-            All of our fruits are fresh and high quality.
-            Sabras exists 5 years and always tries to
-            give the best service to our customers.
-            All of our fruits grow in Israel
-            (because we are sabras).
-            We located at Through Ramatayim 67,
-            Hod Hasharon,
+        <p style="color: #29627e;text-align:right">
+            בקרו בדף הפייסבוק שלנו<a href="https://www.facebook.com/Musicly-108669654304902" class="fa fa-facebook" target="_blank"></a>
+
+            <div class="fb-share-button" style="display:block;text-align:right" data-href="https://www.facebook.com/Musicly-108669654304902" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FSabrasme&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">שיתוף</a></div>
+
         </p>
     </section>
+   
 
     <div id="canvas-wrap">
         <canvas id="myCanvas">
