--- a/musicly/Views/Register/Index.cshtml
+++ b/musicly/Views/Register/Index.cshtml
@@ -3,90 +3,119 @@
 @{
     ViewData["Title"] = "Register";
 }
+<!-- Icons font CSS-->
+<link href="~/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
+<link href="~/vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
+<!-- Font special for pages-->
+<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-<h2>New Account</h2>
+<!-- Vendor CSS-->
+<link href="~/vendor/select2/select2.min.css" rel="stylesheet" media="all">
+<link href="~/vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
+
+<!-- Main CSS-->
+<link href="~/css/register.css" rel="stylesheet" media="all">
+<style>
+    .col-2{
+        flex:none;
+        max-width:100%;
+    }
+
+    .col1{
+        width:100%;
+    }
+    .title{
+        text-align:right;
+        font-weight:700;
+    }
+</style>
 <h3>@ViewBag.ErrorMsg</h3>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Fill your personal details to get smoothies for expensive price</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div class="p-t-20 p-b-100 font-poppins">
+        <div class="wrapper wrapper--w680">
+            <div class="card card-4">
+                <div class="card-body">
+                    <h1 class="title">הרשמה</h1>
+                    <form method="POST">
+                        <div class="row row-space">
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">שם פרטי</label>
+                                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "input--style-4", @name = "first_name" } })
+                                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text" })
+                                </div>
+                            </div>
+                            <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">שם משפחה</label>
+                                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "input--style-4", @name = "last_name" } })
+                                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col1">
+                                <div class="input-group">
+                                    <label class="label">תאריך לידה</label>
+                                    <div class="input-group-icon">
+                                        @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "input--style-4 js-datepicker", @name = "date", @type="date" } })
+                                        @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col1">
+                                <div class="input-group">
+                                    <label class="label">שם משתמש</label>
+                                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "input--style-4", @name = "username"} })
+                                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text" })
+                                </div>
+                            </div>
+                        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BirthDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new {@type="password",  @class = "form-control", placeholder = "Password" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model., htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ZipCode, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Join Us !" class="btn btn-default" />
+                        <div class="row row-space">
+                            <div class="col1">
+                                <div class="input-group">
+                                    <label class="label">סיסמא</label>
+                                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "input--style-4", @name = "password", @type = "password" } })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row row-space">
+                            <div class="col1">
+                                <div class="input-group">
+                                    <label class="label">עיר מגורים</label>
+                                    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "input--style-4", @name = "City" } })
+                                    @Html.ValidationMessageFor(model => model.City, "", new { @class = "text" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="p-t-15">
+                            <button class="btn btn--radius-2 btn--blue" type="submit">הרשם</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
+    <!-- Jquery JS-->
+    <script src="~/vendor/jquery/jquery.min.js"></script>
+    <!-- Vendor JS-->
+    <script src="~/vendor/select2/select2.min.js"></script>
+    <script src="~/vendor/datepicker/moment.min.js"></script>
+    <script src="~/vendor/datepicker/daterangepicker.js"></script>
+
+ 
 }
 
 @*@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}*@
+        @Scripts.Render("~/bundles/jqueryval")
+    }*@
