--- a/musicly/Views/Instruments/InstrumentsList.cshtml
+++ b/musicly/Views/Instruments/InstrumentsList.cshtml
@@ -20,12 +20,18 @@
         width: 100%;
     }*/
     .instrumentCard {
-        height: 400px;
+        height: 380px;
         text-align: center;
-        border: 1px solid black;
-        width: 24%;
+        border: 1px solid #bdc0ec;
+        width: 18%;
         margin-right: 1%;
         margin-bottom: 1%;
+        border-radius: 12px;
+    }
+
+    .instrumentCard:hover {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.1s;
     }
 
     .filters {
@@ -34,24 +40,23 @@
     }
 
     .instrumentImage {
-        max-width: 100%;
-        margin-top: 5px;
-        max-height: 70%;
-        min-height: 70%;
+        max-width: 90%;
+        margin-top: 15px;
+        height: 55%;
     }
 
     .instrumentName {
-        margin-top: -30px;
-        font-size: 35px;
+        margin-top: 10px;
+        font-size: 25px;
     }
 
     .instrumentDescription {
-        font-size: 25px;
+        font-size: 20px;
         margin-top: -3px;
     }
 
     .instrumentPrice {
-        font-size: 30px;
+        font-size: 25px;
         margin-top: 5px;
     }
 
@@ -60,11 +65,22 @@
     }
 
     .addToCartBtn {
-        /*float: left;*/
-        position: absolute;
-        bottom: 2%;
-        left: 5%;
+        background-color: #008CBA;
+        position: initial;
+        color:white;
+        border-radius:10px;
+        border:none;
+        font-size:24px;
     }
+
+        .addToCartBtn:hover {
+            background-color: white;
+            position: initial;
+            color: black;
+            border-radius: 10px;
+            border: 2px solid #008CBA;
+            font-size: 24px;
+        }
 </style>
 <head>
     <meta charset="utf-8" />
@@ -75,8 +91,8 @@
     <div class="container">
         <div class="row">
             <div class="main-content" style="min-width:100%">
-                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                    <div id="instrumentList" class="row instrumentList">
+                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10" >
+                    <div id="instrumentList" class="row instrumentList" style="justify-content:center">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
@@ -194,7 +210,7 @@
                 var addToCartBtn = document.createElement("button");
                 addToCartBtn.className = "addToCartBtn";
                 addToCartBtn.setAttribute("instrumentId", instrument.id);
-                addToCartBtn.innerHTML = "add to cart";
+                addToCartBtn.innerHTML = "הוספה לעגלה 🛒";
                 instrumentCard.appendChild(instrumentImg);
                 instrumentCard.appendChild(instrumentName);
                 instrumentCard.appendChild(instrumentDescription);
