--- a/musicly/Views/Shared/_Layout.cshtml
+++ b/musicly/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
             position: absolute;
             width: 100%;
             border-radius: 0;
-            height:50px;
+            height:65px;
         }
         body{
             font-family:'Segoe UI';
@@ -80,47 +80,6 @@
     </style>
 </head>
 <body>
-
-    <!---<div class="navbar-collapse">
-        <ul class="nav navbar-nav navbar-right navbar-nav ml-auto">
-
-            @if (Context.Session.GetString("UserName") != null &&
-    Context.Session.GetInt32("Admin") != 1)
-            {
-                <li><a asp-area="" asp-controller="Instruments" asp-action="InstrumentsList">Instruments</a></li>
-                <li><a asp-area="" asp-controller="InstrumentOrdersController" asp-action="Cart">🛒</a></li>
-                <li class="logout">@Html.ActionLink("Logout", "Logout", "Login")</li>
-            }
-            @if (Context.Session.GetInt32("Admin") == 1)
-            {
-                <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
-                <li><a asp-area="" asp-controller="InstrumentTypes" asp-action="Index">Instrument Types</a></li>
-                <li><a asp-area="" asp-controller="InstrumentOrders" asp-action="Index">Orders</a></li>
-                <li><a asp-area="" asp-controller="Instruments" asp-action="Index">Instruments</a></li>
-                <li class="logout">@Html.ActionLink("Logout", "Logout", "Login")</li>
-            }
-            else if (Context.Session.GetString("UserName") == null)
-            {
-                <li>@Html.ActionLink("Register", "Index", "Register")</li>
-                <li>@Html.ActionLink("Login", "Index", "Login")</li>
-            }
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Contact">צור קשר</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="About">אודות</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Index">דף הבית</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Index">מוזיקלי</a>
-            </li>
-        </ul>
-
-    </div>--->
 
     <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="d-flex flex-grow-1">
@@ -167,11 +126,23 @@
         </div>
         <div class="navbar-collapse flex-grow-1 text-right">
             <ul class="navbar-nav ml-auto flex-nowrap">
+                @if (Context.Session.GetString("Admin") != null && Context.Session.GetInt32("Admin") == 1)
+                {
+                    <li class="nav-item" class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Users" asp-action="Index">ניהול משתמשים</a>
+                    </li>
+                    <li class="nav-item" class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="InstrumentTypes" asp-action="Index">ניהול סוגי כלים</a>
+                    </li>
+                    <li class="nav-item" class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="InstrumentOrders" asp-action="Index">ניהול הזמנות</a>
+                    </li>
+                    <li class="nav-item" class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Instruments" asp-action="Index">ניהול כלי נגינה</a>
+                    </li>
+                }
 
-                <!---li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">צור קשר</a>
-                </li-->
-                @if (Context.Session.GetString("UserName") != null && Context.Session.GetInt32("Admin") != 1)
+                @if (Context.Session.GetString("UserName") != null)
                 {
                     <li class="nav-item" class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Instruments" asp-action="InstrumentsList">כלי נגינה</a>
@@ -198,7 +169,7 @@
     </nav>
 
 
-    <div class="onoffswitch3">
+    <div class="onoffswitch3" style="padding-top:15px">
         <label class="onoffswitch3-label" for="myonoffswitch3">
             <span class="onoffswitch3-inner">
                 <marquee id="articles-view" class="scroll-text" style="direction:rtl"></marquee>
