--- a/musicly/Views/Shared/_Layout.cshtml
+++ b/musicly/Views/Shared/_Layout.cshtml
@@ -140,6 +140,9 @@
                     <li class="nav-item" class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Instruments" asp-action="Index">ניהול כלי נגינה</a>
                     </li>
+                    <li class="nav-item" class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Statistics" asp-action="Index">סטטיסטיקות של קניות</a>
+                    </li>
                 }
 
                 @if (Context.Session.GetString("UserName") != null)
