--- a/musicly/Views/Instruments/Index.cshtml
+++ b/musicly/Views/Instruments/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.ImagePath)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.InstrumentType.Id)
+                @Html.DisplayFor(modelItem => item.InstrumentType.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
