--- a/musicly/Views/Instruments/InstrumentsList.cshtml
+++ b/musicly/Views/Instruments/InstrumentsList.cshtml
@@ -98,6 +98,19 @@
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                     <div class="filter" style="text-align:right" dir="rtl">
                         <h3 class="filter_title">סינון</h3>
+
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                סוג כלי נגינה
+                            </button>
+                            <div class="dropdown-menu" id="InstrumentTypeOptions" aria-labelledby="dropdownMenuButton">
+                                @*<a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>*@
+                            </div>
+                        </div>
+                        <br />
+
                         <input type="text" id="NameSearch" placeholder="חיפוש כלי נגינה" class="form-control" />
                         <h4 class="heading">מחיר</h4>
                         <div class="scrollbar-prop">
@@ -135,152 +148,184 @@
         </div>
     </div>
 
-<script>
-    var filters = [];
-    var nameFilter = "";
-    var allInstruments = [];
-    $(document).ready(async () => {
-        if (sessionStorage.cart == undefined) {
-            sessionStorage.cart = JSON.stringify([]);
-        }
-        allInstruments = await getAllInstruments();
-        createInstruments(allInstruments);
-        console.table(allInstruments);
-        console.log(allInstruments);
-            
+    <script>
+        var filters = [];
+        var nameFilter = "";
+        var allInstruments = [];
+        var instrumentTypeFilter = "";
+        $(document).ready(async () => {
+            if (sessionStorage.cart == undefined) {
+                sessionStorage.cart = JSON.stringify([]);
+            }
+            var allInstrumentTypes = await getAllInstrumentTypes();
 
-        $('.priceFilter').on('click',
-            (event) => {
-                var target = event.target;
-                var over = target.getAttribute('over');
-                var under = target.getAttribute('under');
-                $("#instrumentList").empty();
-                if (target.checked) {
-                    filters.push({ over, under })
-                } else {
-                    filters = filters.filter(filter => !(filter.over == over && filter.under == under));
-                }
-                //var userSearch = $('#NameSearch').val();
-                //var filteredInstruments = filterByName(allInstruments, userSearch);
-                createFilteredInstruments();
-                //if (filters.length == 0) {
-                //    createInstruments(filteredInstruments);
-                //} else {
-                //    createInstruments(filterInstruments(filteredInstruments, filters))
-                //}
-            })
-
-        $('.addToCartBtn').on('click',
-            (event) => {
-                var target = event.target;
-                var instrumentId = target.getAttribute('instrumentId');
-                var cart = JSON.parse(sessionStorage.cart);
-                var exists = 0;
-                for (cartItem of cart) {
-                    if (cartItem.id == instrumentId) {
-                        cartItem.quantity++;
-                        exists++;
-                    }
-                }
-                if (!exists) {
-                    cart.push({ id: instrumentId, quantity: 1 })
-                }
-                sessionStorage.cart = JSON.stringify(cart);
+            $('#InstrumentTypeOptions').empty();
+            $.each(allInstrumentTypes, function (i, p) {
+                $('#InstrumentTypeOptions').append($('<a class="dropdown-item instrumentTypeOption" href="#"></a>').val(p.name).html(p.name));
             });
-        $('#NameSearch').keyup((event) => {
+            $('#InstrumentTypeOptions').append($('<a class="dropdown-item instrumentTypeOption" href="#"></a>').val('הכל').html('הכל'));
 
-            //$("#instrumentList").empty();
+            allInstruments = await getAllInstruments();
+            createInstruments(allInstruments);
+            console.table(allInstruments);
+            console.log(allInstruments);
 
-            //var userSearch = $('#NameSearch').val();
-            //var filteredObjects = filterByName(allInstruments, userSearch);
-            //var nextFilterObjects = filterInstruments(filteredObjects, filters);
+            $('.instrumentTypeOption').on('click', (event) => {
 
-            //createInstruments(nextFilterObjects);
-            debugger;
-            nameFilter = $('#NameSearch').val();
-            createFilteredInstruments();
+                //alert(event.target.innerText);
+                instrumentTypeFilter = event.target.innerText;
+                createFilteredInstruments();
+            });
+
+
+            $('.priceFilter').on('click',
+                (event) => {
+                    var target = event.target;
+                    var over = target.getAttribute('over');
+                    var under = target.getAttribute('under');
+                    $("#instrumentList").empty();
+                    if (target.checked) {
+                        filters.push({ over, under })
+                    } else {
+                        filters = filters.filter(filter => !(filter.over == over && filter.under == under));
+                    }
+                    //var userSearch = $('#NameSearch').val();
+                    //var filteredInstruments = filterByName(allInstruments, userSearch);
+                    createFilteredInstruments();
+                    //if (filters.length == 0) {
+                    //    createInstruments(filteredInstruments);
+                    //} else {
+                    //    createInstruments(filterInstruments(filteredInstruments, filters))
+                    //}
+                })
+
+            $('.addToCartBtn').on('click',
+                (event) => {
+                    var target = event.target;
+                    var instrumentId = target.getAttribute('instrumentId');
+                    var cart = JSON.parse(sessionStorage.cart);
+                    var exists = 0;
+                    for (cartItem of cart) {
+                        if (cartItem.id == instrumentId) {
+                            cartItem.quantity++;
+                            exists++;
+                        }
+                    }
+                    if (!exists) {
+                        cart.push({ id: instrumentId, quantity: 1 })
+                    }
+                    sessionStorage.cart = JSON.stringify(cart);
+                });
+
+
+            $('#NameSearch').keyup((event) => {
+
+                //$("#instrumentList").empty();
+
+                //var userSearch = $('#NameSearch').val();
+                //var filteredObjects = filterByName(allInstruments, userSearch);
+                //var nextFilterObjects = filterInstruments(filteredObjects, filters);
+
+                //createInstruments(nextFilterObjects);
+                nameFilter = $('#NameSearch').val();
+                createFilteredInstruments();
+            });
+
+
         });
 
+        const createFilteredInstruments = () => {
+            $("#instrumentList").empty();
+            // TODO: Check if by refernce, should not metter because filter is not
+            var filteredObjects = allInstruments;
+            if (instrumentTypeFilter !== "" && instrumentTypeFilter !== "הכל") {
+                filteredObjects = filteredObjects.filter(x => x.instrumentType.name === instrumentTypeFilter)
+            }
 
-    });
+            filteredObjects = filterByName(filteredObjects, nameFilter);
+            filteredObjects = filterInstruments(filteredObjects, filters);
 
-    const createFilteredInstruments = () => {
-        $("#instrumentList").empty();
-        var filteredObjects = filterByName(allInstruments, nameFilter);
-        var nextFilterObjects = filterInstruments(filteredObjects, filters);
-
-        createInstruments(nextFilterObjects);
-
-
-    }
-
-    const filterByName = (instruments, name) => {
-        if (name === "") {
-            return instruments;
+            createInstruments(filteredObjects);
         }
-        return instruments.filter(instrument => instrument.name.includes(name))
-    }
 
-    const getAllInstruments = async () => {
-        return await $.ajax({
-            url: "/Instruments/list",
-            success: function (instruments, status, xhr) {
+        const filterByName = (instruments, name) => {
+            if (name === "") {
                 return instruments;
-            },
-            error: function (xhr, status, err) {
-                console.log("fail");
-                return [];
             }
-        })
-    }
-
-
-
-
-
-
-    const createInstruments = (instruments) => {
-        for (instrument of instruments) {
-            var instrumentCard = document.createElement("div");
-            instrumentCard.className = "instrumentCard col-xs-6 col-sm-4 col-md-3 col-lg-5ths";
-            var instrumentImg = document.createElement("img");
-            instrumentImg.className = "instrumentImage";
-            instrumentImg.setAttribute("src", '/Images/' + instrument.imagePath)
-            var instrumentName = document.createElement("div");
-            instrumentName.className = "instrumentName";
-            instrumentName.innerHTML = instrument.name;
-            var instrumentDescription = document.createElement("div");
-            instrumentDescription.className = "instrumentDescription";
-            instrumentDescription.innerHTML = instrument.description;
-            var instrumentPrice = document.createElement("div");
-            instrumentPrice.className = "instrumentPrice";
-            instrumentPrice.innerHTML = instrument.price;
-            var addToCartBtn = document.createElement("button");
-            addToCartBtn.className = "addToCartBtn";
-            addToCartBtn.setAttribute("instrumentId", instrument.id);
-            addToCartBtn.innerHTML = "הוספה לעגלה 🛒";
-            instrumentCard.appendChild(instrumentImg);
-            instrumentCard.appendChild(instrumentName);
-            instrumentCard.appendChild(instrumentDescription);
-            instrumentCard.appendChild(instrumentPrice);
-            instrumentCard.appendChild(addToCartBtn);
-            $("#instrumentList").append(instrumentCard);
+            return instruments.filter(instrument => instrument.name.includes(name))
         }
-    }
 
-    const filterInstruments = (instruments, filters) => {
-        if (filters.length == 0) {
-            return instruments
-        }
-        var filteredInstruments = instruments.filter(instrument => {
-            for (filter of filters) {
-                if (instrument.price >= filter.over && instrument.price <= filter.under) {
-                    return instrument;
+        const getAllInstruments = async () => {
+            return await $.ajax({
+                url: "/Instruments/list",
+                success: function (instruments, status, xhr) {
+                    return instruments;
+                },
+                error: function (xhr, status, err) {
+                    console.log("fail");
+                    return [];
                 }
+            })
+        }
+
+        const getAllInstrumentTypes = async () => {
+            return await $.ajax({
+                url: "/Instruments/Types",
+                success: function (instruments, status, xhr) {
+                    return instruments;
+                },
+                error: function (xhr, status, err) {
+                    console.log("fail");
+                    return [];
+                }
+            })
+        }
+
+
+
+
+        const createInstruments = (instruments) => {
+            for (instrument of instruments) {
+                var instrumentCard = document.createElement("div");
+                instrumentCard.className = "instrumentCard col-xs-6 col-sm-4 col-md-3 col-lg-5ths";
+                var instrumentImg = document.createElement("img");
+                instrumentImg.className = "instrumentImage";
+                instrumentImg.setAttribute("src", '/Images/' + instrument.imagePath)
+                var instrumentName = document.createElement("div");
+                instrumentName.className = "instrumentName";
+                instrumentName.innerHTML = instrument.name;
+                var instrumentDescription = document.createElement("div");
+                instrumentDescription.className = "instrumentDescription";
+                instrumentDescription.innerHTML = instrument.description;
+                var instrumentPrice = document.createElement("div");
+                instrumentPrice.className = "instrumentPrice";
+                instrumentPrice.innerHTML = instrument.price;
+                var addToCartBtn = document.createElement("button");
+                addToCartBtn.className = "addToCartBtn";
+                addToCartBtn.setAttribute("instrumentId", instrument.id);
+                addToCartBtn.innerHTML = "הוספה לעגלה 🛒";
+                instrumentCard.appendChild(instrumentImg);
+                instrumentCard.appendChild(instrumentName);
+                instrumentCard.appendChild(instrumentDescription);
+                instrumentCard.appendChild(instrumentPrice);
+                instrumentCard.appendChild(addToCartBtn);
+                $("#instrumentList").append(instrumentCard);
             }
-        })
-        return filteredInstruments;
-    }
-</script>
+        }
+
+        const filterInstruments = (instruments, filters) => {
+            if (filters.length == 0) {
+                return instruments
+            }
+            var filteredInstruments = instruments.filter(instrument => {
+                for (filter of filters) {
+                    if (instrument.price >= filter.over && instrument.price <= filter.under) {
+                        return instrument;
+                    }
+                }
+            })
+            return filteredInstruments;
+        }
+    </script>
 </body>
 </html>
