--- a/musicly/Views/Home/Index.cshtml
+++ b/musicly/Views/Home/Index.cshtml
@@ -1,11 +1,33 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div>
-    <center dir="rtl">
-        <video width="800" height="500" controls>
-            <source src="~/images/music-instruments-song-for-children-video-360p-mp4.mp4" type="video/mp4">
-        </video>
-        <br />
-    </center>
-</div>
+    <div style="text-align: center">
+        <h1 >ברוכים הבאים למיוזקלי</h1>
+        <div>
+            <center dir="rtl">
+                <video width="800" height="500" controls>
+                    <source src="~/images/music-instruments-song-for-children-video-360p-mp4.mp4" type="video/mp4">
+                </video>
+                <br />
+            </center>
+        </div>
+        <h2 style="color:#9CD918">האני מאמין שלנו</h2>
+        <h3 class="text-right" dir="rtl">מיוזקלי נוצרה מתוך אהבה למוסיקה. בשבילנו מוסיקה היא דרך חיים ולא רק עסק. כל כלי הנגינה תחת קורת גג אחת. מיוזקלי הבית של כלי הנגינה.
+            <br/>
+            סאונד תאורה ומוסיקה הם המפתח לחוויה יוצאת דופן הנצרבת בזיכרון!
+            <br/>
+            בין אם אתם אנשי מוזיקה יזמים, בעלי אולמות, מפיקים מוזיקליים או בליינים
+            <br/>
+            אנחנו מאמינים שמגיע לכם לראות, לשמוע ולהרגיש אחרת. 
+            <br/>
+            זו בדיוק הסיבה שהקמנו עבורכם את מיוזקלי - רשת חנויות קונספט בפריסה ארצית מבית המסלול האקדמי המכללה למנהל.
+            <br/>
+            מגוון המוצרים האינסופי שלנו, המותגים המובילים כמו גם צוותי המכירות המקצועיים והמכירה הישירה מהיבואן לצרכן
+            מאפשרים לנו להציע לכם ציוד רב מוצרי סאונד, הגברה באיכות גבוהה ובמחירים נוחים.
+            <br/>
+            <br/>
+            החטיבה המקצועית שלנו מתמחה בייעוץ והתקנת מערכות סאונד ותאורה לעסקים, מוסדות ופרויקטים.
+            בואו לגלות שותפים לחשיבה יצירתית ומקצועית, תוך מתן שירות מעולה ויכולת הבנת הצרכים הייחודיים לכם.
+            <br/>
+            עבורנו סאונד ותאורה זו דרך חיים היוצרת חוויה ייחודית שתביא להצלחה שלכם ושלנו.</h3>
+    </div>
