--- a/musicly/Views/Instruments/InstrumentsList.cshtml
+++ b/musicly/Views/Instruments/InstrumentsList.cshtml
@@ -215,6 +215,7 @@
                         cart.push({ id: instrumentId, quantity: 1 })
                     }
                     sessionStorage.cart = JSON.stringify(cart);
+                    alert("נוסף לעגלה")
                 });
 
 
